--- a/BrightUs_StaffAttendance/Info.plist
+++ b/BrightUs_StaffAttendance/Info.plist
@@ -25,7 +25,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>To scan Qr Code</string>
 	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<string>Main</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
