--- a/BrightUs_StaffAttendance/Info.plist
+++ b/BrightUs_StaffAttendance/Info.plist
@@ -40,5 +40,12 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>App wants to use your location</string>
 </dict>
 </plist>
